--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -2,19 +2,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:right="1dp" android:left="1dp" android:top="1dp" android:bottom="0dp">
         <shape android:shape="rectangle">
-            <corners android:radius="50dp" /> <!-- Borda arredondada com raio de 30dp -->
-            <solid android:color="#33000000" /> <!-- Cor da sombra -->
+            <corners android:radius="10dp" /> <!-- Borda arredondada com raio de 30dp -->
+            <solid android:color="#386123" /> <!-- Cor da sombra -->
             <padding
                 android:left="0dp"
                 android:top="0dp"
                 android:right="0dp"
-                android:bottom="1dp" /> <!-- Ajusta a posição da sombra -->
+                android:bottom="5dp" /> <!-- Ajusta a posição da sombra -->
 
-            <size android:height="1dp" /> <!-- Define a altura da sombra -->
+            <size android:height="5dp" /> <!-- Define a altura da sombra -->
 
             <stroke
                 android:width="1dp"
-                android:color="#33000000" /> <!-- Cor da borda sombreada -->
+                android:color="#08000000" /> <!-- Cor da borda sombreada -->
         </shape>
     </item>
 </layer-list>
