--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+       <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="verde_fundo">#8AA9B59F</color>
+    <color name="cor_textbtalp">#435731</color>
+    <color name="link">#084FA2</color>
+    <color name="saiba_mais">#7D795B</color>
+
 </resources>
