--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -35,20 +35,58 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="369dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="384dp"
+        android:background="@drawable/button_google"
+        android:hint="    Digite seu email"
+        android:textSize="12sp"
+        android:textColor="#60030C0C"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btentrar"
-        android:layout_width="328dp"
+        android:layout_width="364dp"
         android:layout_height="48dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="496dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="448dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_green"
         android:fontFamily="@font/carme"
         android:letterSpacing="0.1"
         android:text="Entrar"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textSize="14sp"
+        android:textSize="15sp"
         app:backgroundTint="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btgoogle"
+        android:layout_width="364dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="508dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/button_google"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.1"
+        android:text="Login via Google"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:backgroundTint="@null"
+        app:layout_constraintCircleRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
