--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,51 +7,109 @@
     android:background="@color/verde_fundo"
     tools:context=".MainActivity2">
 
-    <TextView
-        android:id="@+id/textou"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="196dp"
-        android:layout_marginTop="584dp"
-        android:fontFamily="@font/carme"
-        android:letterSpacing="0.01"
-        android:text="ou"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="221dp"
+        android:layout_height="198dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/group_11" />
 
     <TextView
-        android:id="@+id/linkcad"
+        android:id="@+id/textemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="624dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-20dp"
         android:fontFamily="@font/carme"
         android:letterSpacing="0.01"
-        android:text="Cadastre-se"
-        android:textColor="@color/link"
-        android:textSize="15sp"
+        android:text="Email"
+        android:textColor="@color/black"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/rectangleemail"
+        app:layout_constraintTop_toTopOf="@+id/rectangleemail" />
+
+
+    <View
+        android:id="@+id/rectangleemail"
+        android:layout_width="369dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="420dp"
+        android:background="@drawable/inputemailsenha"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <EditText
         android:id="@+id/editTextEmail"
-        android:layout_width="369dp"
+        android:layout_width="350dp"
         android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="384dp"
-        android:background="@drawable/button_google"
-        android:hint="    Digite seu email"
-        android:textSize="12sp"
-        android:textColor="#60030C0C"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="420dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/carme"
+        android:hint="     Digite seu email"
         android:inputType="textEmailAddress"
+        android:textColor="#60030C0C"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/rectanglesenha"
+        android:layout_width="369dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="332dp"
+        android:background="@drawable/inputemailsenha"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <EditText
+        android:id="@+id/editTextsenha"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="332dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/carme"
+        android:hint="     Digite sua senha"
+        android:inputType="textEmailAddress"
+        android:textColor="#60030C0C"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <TextView
+        android:id="@+id/textsenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="-20dp"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:text="Senha"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rectanglesenha"
+        app:layout_constraintTop_toTopOf="@+id/rectanglesenha" />
 
     <Button
         android:id="@+id/btentrar"
@@ -91,14 +149,37 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="221dp"
-        android:layout_height="198dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/group_11" />
+    <TextView
+        android:id="@+id/textou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="196dp"
+        android:layout_marginTop="584dp"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:text="ou"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/linkcad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="624dp"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:text="Cadastre-se"
+        android:textColor="@color/link"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
