--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,62 +7,16 @@
     android:background="@color/verde_fundo"
     tools:context=".MainActivity2">
 
+
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="221dp"
-        android:layout_height="198dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="283dp"
+        android:layout_height="246dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/group_11" />
-
-    <TextView
-        android:id="@+id/textemail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="-20dp"
-        android:fontFamily="@font/carme"
-        android:letterSpacing="0.01"
-        android:text="Email"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/rectangleemail"
-        app:layout_constraintTop_toTopOf="@+id/rectangleemail" />
-
-
-    <View
-        android:id="@+id/rectangleemail"
-        android:layout_width="369dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="420dp"
-        android:background="@drawable/inputemailsenha"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="420dp"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/carme"
-        android:hint="     Digite seu email"
-        android:inputType="textEmailAddress"
-        android:textColor="#60030C0C"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/rectanglesenha"
@@ -70,37 +24,31 @@
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="332dp"
+        android:layout_marginBottom="316dp"
         android:background="@drawable/inputemailsenha"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <EditText
-        android:id="@+id/editTextsenha"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="332dp"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/carme"
-        android:hint="     Digite sua senha"
-        android:inputType="textEmailAddress"
-        android:textColor="#60030C0C"
-        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/rectangleemail"
+        android:layout_width="369dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="396dp"
+        android:background="@drawable/inputemailsenha"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/linkesqsenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:autoLink="web"
         android:fontFamily="@font/carme"
@@ -113,10 +61,61 @@
         app:layout_constraintTop_toBottomOf="@+id/rectanglesenha" />
 
     <TextView
+        android:id="@+id/textemail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="-20dp"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:text="Email"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rectangleemail"
+        app:layout_constraintTop_toTopOf="@+id/rectangleemail" />
+
+    <EditText
+        android:id="@+id/editTextsenha"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="316dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/carme"
+        android:hint="     Digite sua senha"
+        android:inputType="textEmailAddress"
+        android:textColor="#60030C0C"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextEmail"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="396dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/carme"
+        android:hint="     Digite seu email"
+        android:inputType="textEmailAddress"
+        android:textColor="#60030C0C"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
         android:id="@+id/textsenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="-20dp"
         android:fontFamily="@font/carme"
         android:letterSpacing="0.01"
@@ -127,13 +126,14 @@
         app:layout_constraintStart_toStartOf="@+id/rectanglesenha"
         app:layout_constraintTop_toTopOf="@+id/rectanglesenha" />
 
+
     <Button
         android:id="@+id/btentrar"
         android:layout_width="364dp"
-        android:layout_height="48dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="448dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="468dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/button_green"
         android:fontFamily="@font/carme"
         android:letterSpacing="0.1"
@@ -145,14 +145,45 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/linkcad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="632dp"
+        android:autoLink="web"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:linksClickable="true"
+        android:text="Cadastre-se"
+        android:textAlignment="center"
+        android:textColor="@color/link"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="192dp"
+        android:layout_marginTop="592dp"
+        android:fontFamily="@font/carme"
+        android:letterSpacing="0.01"
+        android:text="ou"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btgoogle"
         android:layout_width="364dp"
-        android:layout_height="48dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="508dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/button_google_icon"
         android:fontFamily="@font/carme"
         android:letterSpacing="0.1"
@@ -165,37 +196,7 @@
         app:layout_constraintCircleRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textou"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="196dp"
-        android:layout_marginTop="584dp"
-        android:fontFamily="@font/carme"
-        android:letterSpacing="0.01"
-        android:text="ou"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/linkcad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="624dp"
-        android:fontFamily="@font/carme"
-        android:letterSpacing="0.01"
-        android:text="Cadastre-se"
-        android:textColor="@color/link"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autoLink="web"
-        android:linksClickable="true"/>
+        app:layout_constraintTop_toTopOf="@+id/btentrar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
