correcao botao faca parte

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:fontFamily="@font/carme"
         android:letterSpacing="0.1"
         android:text="Entrar"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="14sp"
         app:backgroundTint="@null"
@@ -49,6 +50,7 @@
         android:fontFamily="@font/carme"
         android:letterSpacing="0.1"
         android:text="Faça parte"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/cor_textbtalp"
         android:textSize="14sp"
