--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="cor_textbtalp">#435731</color>
     <color name="link">#084FA2</color>
     <color name="saiba_mais">#7D795B</color>
+    <color name="verde_pesq">#BCC6B5</color>
 
 </resources>
