--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,43 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/border_scroll_view">
+
+    <View
+        android:id="@+id/recimg"
+        android:layout_width="124dp"
+        android:layout_height="144dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:background="@color/cx_verde"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageView
         android:id="@+id/itemImageView"
-        android:layout_width="164dp"
-        android:layout_height="157dp"
+        android:layout_width="95dp"
+        android:layout_height="132dp"
         android:layout_gravity="center_horizontal"
-
-
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="12dp"
         android:src="@drawable/placeholder_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/recdesc"
+        android:layout_width="271dp"
+        android:layout_height="147dp"
+        app:layout_constraintStart_toEndOf="@+id/recimg"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="136dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="68dp"
-        android:padding="8dp"
-        android:textSize="16sp"
+        android:layout_width="213dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/carme"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toEndOf="@+id/itemImageView"
-        app:layout_constraintTop_toBottomOf="@+id/descTextView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/descTextView"
-        android:layout_width="135dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="72dp"
-        android:padding="8dp"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/itemImageView"
+        android:layout_width="213dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="25dp"
+        android:fontFamily="@font/carme"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/milhasTextView"
+        android:layout_width="172dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/carter_one"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/descTextView"
+        app:layout_constraintTop_toBottomOf="@id/descTextView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
