--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -107,4 +107,60 @@
         app:layout_constraintEnd_toEndOf="@+id/searchEditText"
         app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
 
+    <LinearLayout
+        android:layout_width="411dp"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/border_menu">
+
+        <ImageView
+            android:id="@+id/menu"
+            android:layout_width="40dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@drawable/_icon__menu_" />
+
+
+        <ImageView
+            android:id="@+id/home"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp"
+            app:srcCompat="@drawable/_icon__home_" />
+
+        <ImageView
+            android:id="@+id/pessoa"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp"
+            app:srcCompat="@drawable/_icon__person_" />
+
+        <ImageView
+            android:id="@+id/car"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="40dp"
+            app:srcCompat="@drawable/_icon__cart_" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="14dp"
+        app:layout_constraintBottom_toBottomOf="@+id/recpes"
+        app:layout_constraintStart_toEndOf="@+id/filtros"
+        app:srcCompat="@drawable/_icon__chevron_bottom_" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
