--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/verde_fundo"
-    tools:context=".MainActivity2">
+    tools:context=".TelaLogin">
 
 
     <ImageView
