--- a/app/src/main/res/layout/activity_telalogin.xml
+++ b/app/src/main/res/layout/activity_telalogin.xml
@@ -59,7 +59,7 @@
         android:background="@drawable/inputemailsenha"
         android:fontFamily="@font/carme"
         android:hint=" Digite sua senha"
-        android:inputType="textEmailAddress"
+        android:inputType="numberPassword"
         android:textColor="#60030C0C"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,11 +74,11 @@
         android:layout_marginStart="22dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="396dp"
-        android:paddingStart="15dp"
         android:background="@drawable/inputemailsenha"
         android:fontFamily="@font/carme"
         android:hint="Digite seu email"
         android:inputType="textEmailAddress"
+        android:paddingStart="15dp"
         android:textColor="#60030C0C"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
